# kernel

./: .bazelrc  .gitignore  BUILD.bazel  CLAUDE.md  MODULE.bazel  README.md  bazel-bin  bazel-out  bazel-phase-1-foundation  bazel-testlogs  limine.cfg  limine.conf
docs/superpowers/plans/: 2026-05-02-phase-1-foundation.md  2026-05-02-phase-2-memory-management.md  2026-05-05-fix-known-issues.md  2026-05-05-phase-3-apic-timer.md  2026-05-05-phase-4-smp.md  2026-05-05-phase-5-scheduler.md  2026-05-05-phase-6-object-ipc.md  2026-05-10-phase-7-vmm-process.md  2026-05-16-fix-remaining-issues.md  2026-05-16-phase-8-vfs.md  2026-05-17-phase-10-fat32.md  2026-05-17-phase-9-block-layer.md  2026-05-17-vfs-enhancements.md  2026-05-24-cpp-modernization.md
docs/superpowers/specs/: 2026-05-02-c++26-kernel-design.md  2026-05-05-fix-known-issues-design.md  2026-05-05-phase-6-object-ipc-design.md  2026-05-10-phase-7-vmm-process.md  2026-05-16-fix-remaining-issues.md  2026-05-16-phase-8-vfs.md  2026-05-17-phase-10-fat32.md  2026-05-17-phase-9-block-layer.md  2026-05-17-vfs-enhancements.md  2026-05-24-cpp-modernization-design.md
kernel/: BUILD.bazel
kernel/arch/x86_64/: BUILD.bazel  acpi.cpp  acpi.hpp  apic.cpp  apic.hpp  boot.cpp  gdt.cpp  gdt.hpp  idt.cpp  idt.hpp  io.hpp  irq.cpp  irq.hpp  irq_stubs.S  link.ld  msr.hpp  paging.cpp  paging.hpp  paging_host.cpp  pci.cpp  pci.hpp  smp.cpp  smp.hpp  syscall.cpp  syscall.hpp  syscall_entry.S  timer.cpp  timer.hpp  trampoline.S  usermode.S  usermode.hpp
kernel/core/: elf_loader.cpp  elf_loader.hpp  elf_trampoline.S
kernel/core/blk/: BUILD.bazel  ahci.cpp  ahci.hpp  blkdev.cpp  blkdev.hpp  bufcache.cpp  bufcache.hpp
kernel/core/mm/: BUILD.bazel  bitmap_alloc.cpp  bitmap_alloc.hpp  buddy.cpp  buddy.hpp  new_delete.cpp  pmm.cpp  pmm.hpp  slab.cpp  slab.hpp  vmm.cpp  vmm.hpp  vmo.cpp  vmo.hpp
kernel/core/object/: BUILD.bazel  channel.cpp  channel.hpp  handle_table.cpp  handle_table.hpp  object.cpp  object.hpp  port.cpp  port.hpp  process.cpp  process.hpp  rights.hpp
kernel/core/sched/: BUILD.bazel  sched.cpp  sched.hpp  switch.S
kernel/fs/: BUILD.bazel  mount.cpp  mount.hpp  protocol.hpp
kernel/fs/devfs/: BUILD.bazel  devfs.cpp  devfs.ld  init.cpp  syscall.cpp
kernel/fs/fat32/: BUILD.bazel  fat32.cpp  fat32.ld
kernel/fs/tmpfs/: BUILD.bazel  tmpfs.cpp  tmpfs.ld
kernel/init/: BUILD.bazel  init.cpp  init.ld
kernel/init/shell/: BUILD.bazel  shell.cpp  shell.ld
kernel/lib/: BUILD.bazel  bitwise.hpp  crt_stubs.cpp  crt_stubs.hpp  klog.cpp  klog.hpp  panic.cpp  panic.hpp  result.hpp  scoped_lock.hpp  scoped_mem.hpp  serial.cpp  serial.hpp  spinlock.cpp  spinlock.hpp  user_types.hpp
kernel/lib/libcpp/: __config_site
scripts/: debug.sh  run.sh
scripts/lib/: disk_linux.sh  disk_macos.sh
test/: BUILD.bazel
test/fs/: BUILD.bazel  mount_test.cpp  protocol_test.cpp
test/irq/: BUILD.bazel  irq_host.cpp  irq_test.cpp
test/mm/: BUILD.bazel  buddy_test.cpp  pmm_test.cpp  slab_test.cpp  vmo_test.cpp
test/object/: BUILD.bazel  channel_test.cpp  object_test.cpp  port_test.cpp  process_test.cpp
test/sched/: BUILD.bazel  sched_test.cpp
toolchain/: BUILD.bazel  ar-wrapper.sh  embed_binary.bzl  lld-wrapper.sh  objcopy.sh  toolchain_config.bzl  x86_64_elf.BUILD
