filegroup(
    name = "limine_cfg",
    srcs = ["limine.conf"],
    visibility = ["//visibility:public"],
)

platform(
    name = "x86_64_none",
    constraint_values = [
        "@platforms//cpu:x86_64",
        "@platforms//os:none",
    ],
    visibility = ["//visibility:public"],
)

platform(
    name = "x86_64_macos",
    constraint_values = [
        "@platforms//cpu:x86_64",
        "@platforms//os:osx",
    ],
    visibility = ["//visibility:public"],
)

platform(
    name = "x86_64_linux",
    constraint_values = [
        "@platforms//cpu:x86_64",
        "@platforms//os:linux",
    ],
    visibility = ["//visibility:public"],
)
