module(
    name = "kernel",
    version = "0.1.0",
)

bazel_dep(name = "rules_cc", version = "0.2.18")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "bazel_skylib", version = "1.8.2")
bazel_dep(name = "bazel_features", version = "1.43.0")
bazel_dep(name = "protobuf", version = "27.0", repo_name = "com_google_protobuf")
bazel_dep(name = "rules_license", version = "1.0.0")
bazel_dep(name = "googletest", version = "1.17.0", repo_name = "com_google_googletest")

local_path_override(
    module_name = "rules_cc",
    path = "/tmp/rules_cc-0.2.18/rules_cc-0.2.18",
)

local_path_override(
    module_name = "bazel_skylib",
    path = "/tmp/bazel-skylib-1.8.2-release",
)

local_path_override(
    module_name = "bazel_features",
    path = "/tmp/bazel_features-1.43.0-release/bazel_features-1.43.0",
)

local_path_override(
    module_name = "protobuf",
    path = "/tmp/protobuf_stub",
)

local_path_override(
    module_name = "platforms",
    path = "/tmp/platforms-1.0.0-release",
)

local_path_override(
    module_name = "rules_license",
    path = "/tmp/rules_license-1.0.0-release",
)

local_path_override(
    module_name = "googletest",
    path = "/tmp/googletest_stub",
)

# NOTE: These local overrides for rules_java, rules_shell, etc. are needed when
# building offline (no network to BCR). When network is available, they can be
# removed -- Bazel will download the real modules from the Bazel Central Registry.
local_path_override(
    module_name = "rules_java",
    path = "/tmp/rules_java_stub",
)

local_path_override(
    module_name = "rules_shell",
    path = "/tmp/rules_shell_stub",
)

local_path_override(
    module_name = "rules_python",
    path = "/tmp/rules_python_stub",
)

local_path_override(
    module_name = "apple_support",
    path = "/tmp/apple_support_stub",
)

local_path_override(
    module_name = "buildozer",
    path = "/tmp/buildozer_stub",
)

local_path_override(
    module_name = "zlib",
    path = "/tmp/zlib_stub",
)

register_toolchains("//toolchain:x86_64_elf_toolchain")
register_toolchains("//toolchain:host_toolchain")
