load("@rules_cc//cc:defs.bzl", "cc_binary")

cc_binary(
    name = "kernel",
    deps = [
        "//kernel/arch/x86_64:arch",
        "//kernel/lib:klib",
        "//kernel/core/mm:mm",
        "//kernel/core/mm:vmo",
        "//kernel/core/mm:vmm",
        "//kernel/core/sched:sched",
    ],
    additional_linker_inputs = ["//kernel/arch/x86_64:linker_script"],
    linkopts = ["-Wl,-T,$(location //kernel/arch/x86_64:linker_script)"],
    visibility = ["//visibility:public"],
)
