load("@rules_cc//cc:defs.bzl", "cc_binary")

cc_binary(
    name = "kernel",
    srcs = [
        "core/elf_loader.hpp",
        "core/elf_loader.cpp",
        "core/elf_trampoline.S",
        "//kernel/init:init_embed",
        "//kernel/fs/devfs:devfs_embed",
        "//kernel/fs/tmpfs:tmpfs_embed",
        "//kernel/fs/fat32:fat32_embed",
    ],
    deps = [
        "//kernel/arch/x86_64:arch",
        "//kernel/lib:klib",
        "//kernel/core/mm:mm",
        "//kernel/core/mm:vmo",
        "//kernel/core/mm:vmm",
        "//kernel/core/sched:sched",
        "//kernel/core/blk:blk",
    ],
    additional_linker_inputs = ["//kernel/arch/x86_64:linker_script"],
    linkopts = ["-Wl,-T,$(location //kernel/arch/x86_64:linker_script)"],
    visibility = ["//visibility:public"],
)
