load("@rules_cc//cc:defs.bzl", "cc_binary")

cc_binary(
    name = "init_elf",
    srcs = ["init.cpp"],
    additional_linker_inputs = ["init.ld"],
    copts = [
        "-mcmodel=small",
        "-O2",
    ],
    linkopts = ["-T", "$(location init.ld)"],
    visibility = ["//visibility:private"],
)

# Convert the init ELF binary into a linkable ELF object so the kernel
# can embed it.  We copy the file to a short, clean name first (init.bin)
# so that llvm-objcopy creates predictable symbols:
#   _binary_init_bin_start, _binary_init_bin_end, _binary_init_bin_size.
genrule(
    name = "init_embed",
    srcs = [":init_elf"],
    outs = ["init_embed.o"],
    cmd = "cp $(SRCS) $(@D)/init.bin && " +
          "cd $(@D) && " +
          "/usr/local/opt/llvm/bin/llvm-objcopy " +
          "-I binary -O elf64-x86-64 -B i386:x86-64 " +
          "init.bin $$PWD/init_embed.o",
    visibility = ["//visibility:public"],
)
