load("@rules_cc//cc:defs.bzl", "cc_binary")
load("//toolchain:embed_binary.bzl", "embed_binary")

cc_binary(
    name = "init_elf",
    srcs = ["init.cpp"],
    additional_linker_inputs = ["init.ld"],
    copts = [
        "-mcmodel=small",
        "-O2",
    ],
    linkopts = ["-T", "$(location init.ld)"],
    deps = ["//kernel/lib:kstd"],
    visibility = ["//visibility:private"],
)

embed_binary(
    name = "init_embed",
    src = ":init_elf",
    basename = "init",
    visibility = ["//visibility:public"],
)
