load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "klib",
    srcs = [
        "klog.cpp",
        "panic.cpp",
        "serial.cpp",
    ],
    hdrs = [
        "klog.hpp",
        "panic.hpp",
        "serial.hpp",
    ],
    deps = [
        "//third_party/limine:limine",
    ],
    visibility = ["//visibility:public"],
)
