load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "klib",
    srcs = [
        "crt_stubs.cpp",
        "klog.cpp",
        "panic.cpp",
        "serial.cpp",
        "spinlock.cpp",
    ],
    hdrs = [
        "crt_stubs.hpp",
        "klog.hpp",
        "panic.hpp",
        "serial.hpp",
        "spinlock.hpp",
    ],
    deps = [
        "//third_party/limine:limine",
    ],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "kstd",
    hdrs = [
        "result.hpp",
        "scoped_lock.hpp",
        "scoped_mem.hpp",
        "bitwise.hpp",
        "user_types.hpp",
    ],
    deps = [
        ":klib",
        "//kernel/core/mm:mm",
    ],
    visibility = ["//visibility:public"],
)
