load("@rules_cc//cc:defs.bzl", "cc_test", "cc_library")

# Host-compatible library: pmm, buddy, slab, vmo, object compiled for macOS (host toolchain)
cc_library(
    name = "mm_host",
    srcs = [
        "//kernel/arch/x86_64:paging_host.cpp",
        "//kernel/core/mm:bitmap_alloc.cpp",
        "//kernel/core/mm:buddy.cpp",
        "//kernel/core/mm:pmm.cpp",
        "//kernel/core/mm:slab.cpp",
        "//kernel/core/mm:vmo.cpp",
        "//kernel/core/object:object.cpp",
    ],
    hdrs = [
        "//kernel/core/mm:bitmap_alloc.hpp",
        "//kernel/core/mm:buddy.hpp",
        "//kernel/core/mm:pmm.hpp",
        "//kernel/core/mm:slab.hpp",
        "//kernel/core/mm:vmo.hpp",
    ],
    deps = [
        "//kernel/arch/x86_64:paging_hdrs",
        "//kernel/core/object:object_hdrs",
        "//kernel/lib:klib",
    ],
    visibility = ["//test:__subpackages__"],
)

cc_test(
    name = "pmm_test",
    size = "small",
    srcs = ["pmm_test.cpp"],
    deps = [
        ":mm_host",
        "@com_google_googletest//:gtest",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "slab_test",
    size = "small",
    srcs = ["slab_test.cpp"],
    deps = [
        ":mm_host",
        "@com_google_googletest//:gtest",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "buddy_test",
    size = "small",
    srcs = ["buddy_test.cpp"],
    deps = [
        ":mm_host",
        "@com_google_googletest//:gtest",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "vmo_test",
    size = "small",
    srcs = ["vmo_test.cpp"],
    deps = [
        ":mm_host",
        "@com_google_googletest//:gtest",
        "@com_google_googletest//:gtest_main",
    ],
)
