load("@rules_cc//cc:defs.bzl", "cc_library")

exports_files(["irq.cpp", "irq.hpp"])

cc_library(
    name = "arch",
    srcs = [
        "apic.cpp",
        "boot.cpp",
        "gdt.cpp",
        "idt.cpp",
        "irq.cpp",
        "irq_stubs.S",
        "paging.cpp",
        "syscall.cpp",
        "syscall_entry.S",
        "timer.cpp",
    ],
    hdrs = [
        "apic.hpp",
        "gdt.hpp",
        "idt.hpp",
        "io.hpp",
        "irq.hpp",
        "msr.hpp",
        "syscall.hpp",
        "timer.hpp",
    ],
    deps = [
        "//kernel/core/mm:mm",
        "//kernel/lib:klib",
        "//third_party/limine:limine",
    ],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "paging_hdrs",
    hdrs = ["paging.hpp"],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "linker_script",
    srcs = ["link.ld"],
    visibility = ["//visibility:public"],
)
