load("@rules_cc//cc:defs.bzl", "cc_library")

exports_files(["irq.cpp", "irq.hpp", "paging_host.cpp"])

cc_library(
    name = "arch",
    srcs = [
        "acpi.cpp",
        "apic.cpp",
        "boot.cpp",
        "gdt.cpp",
        "pci.cpp",
        "idt.cpp",
        "irq.cpp",
        "irq_stubs.S",
        "smp.cpp",
        "paging.cpp",
        "syscall.cpp",
        "syscall_entry.S",
        "timer.cpp",
        "trampoline.S",
        "usermode.S",
    ],
    hdrs = [
        "acpi.hpp",
        "apic.hpp",
        "gdt.hpp",
        "idt.hpp",
        "io.hpp",
        "irq.hpp",
        "pci.hpp",
        "smp.hpp",
        "msr.hpp",
        "syscall.hpp",
        "timer.hpp",
        "usermode.hpp",
    ],
    deps = [
        "//kernel/core/mm:mm",
        "//kernel/core/object:object",
        "//kernel/core/sched:sched_hdrs",
        "//kernel/core/blk:blk",
        "//kernel/fs:fs",
        "//kernel/lib:klib",
        "//third_party/limine:limine",
    ],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "paging_hdrs",
    hdrs = ["paging.hpp"],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "pci_hdrs",
    hdrs = ["pci.hpp"],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "linker_script",
    srcs = ["link.ld"],
    visibility = ["//visibility:public"],
)
