load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "blk",
    srcs = ["blkdev.cpp", "bufcache.cpp"],
    hdrs = ["blkdev.hpp", "bufcache.hpp"],
    deps = [
        "//kernel/core/mm:mm",
        "//kernel/lib:klib",
        "//kernel/arch/x86_64:paging_hdrs",
    ],
    visibility = ["//visibility:public"],
)
